--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gulp-concat": "^2.5.2",
     "gulp-consolidate": "^0.2.0",
     "gulp-docs": "^0.1.3",
+    "gulp-gzip": "^1.4.2",
     "gulp-iconfont": "^8.0.1",
     "gulp-inject": "^4.3.0",
     "gulp-plumber": "^1.2.0",
