--- a/package.json
+++ b/package.json
@@ -10,46 +10,48 @@
   "license": "Apache-2.0",
   "dependencies": {
     "es6-weakmap": "^0.0.1",
-    "flickity": "^2.0.10",
-    "git-rev": "^0.2.1",
-    "gulp-bump": "^2.8.0",
-    "gulp-copy": "^1.0.1",
-    "gulp-filter": "^4.0.0",
-    "gulp-git": "^2.4.2",
-    "gulp-install": "^0.6.0",
-    "gulp-sass-json": "^1.0.1",
-    "gulp-tag-version": "^1.3.0",
-    "hamburgers": "^0.9.3",
-    "hyperform": "0.9.9",
-    "jquery": "^2.2.0",
+    "flickity": "^2.2.2",
+    "hamburgers": "^1.1.3",
+    "hyperform": "^0.12.0",
+    "jquery": "^3.6.0",
     "packery": "^2.1.1",
-    "react-day-picker": "^7.3.0"
+    "react-day-picker": "^7.4.10"
   },
   "devDependencies": {
-    "browser-sync": "^2.18.13",
+    "browser-sync": "^2.26.14",
     "font-awesome": "^4.6.1",
-    "gulp": "^3.8.11",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-clean-css": "^3.9.2",
+    "git-rev": "^0.2.1",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-bump": "^3.2.0",
+    "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.5.2",
     "gulp-consolidate": "^0.2.0",
+    "gulp-copy": "^4.0.1",
     "gulp-docs": "^0.1.3",
+    "gulp-filter": "^7.0.0",
+    "gulp-git": "^2.10.1",
     "gulp-gzip": "^1.4.2",
-    "gulp-iconfont": "^8.0.1",
-    "gulp-inject": "^4.3.0",
+    "gulp-iconfont": "^11.0.0",
+    "gulp-inject": "^5.0.5",
+    "gulp-install": "^1.1.0",
     "gulp-plumber": "^1.2.0",
-    "gulp-rename": "^1.2.0",
-    "gulp-sass": "^2.1.0",
-    "gulp-sourcemaps": "^1.12.1",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^4.1.0",
+    "gulp-sass-json": "^1.0.1",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-streamify": "^1.0.2",
     "gulp-svg-sprite": "^1.3.7",
-    "gulp-svgo": "^1.1.1",
-    "gulp-uglify": "^1.1.0",
-    "hbg-mix": "^2.1.1",
-    "lodash": "^4.14.2",
-    "require-dir": "^0.3.2",
-    "run-sequence": "^1.2.2",
+    "gulp-svgo": "^2.2.1",
+    "gulp-tag-version": "^1.3.0",
+    "gulp-uglify": "^3.0.2",
+    "hbg-mix": "^2.1.2",
+    "lodash": "^4.17.21",
+    "require-dir": "^1.2.0",
+    "run-sequence": "^2.2.1",
     "svg-scaler": "^0.1.5",
-    "yargs": "^11.0.0"
+    "vinyl": "^2.2.1",
+    "yargs": "^17.0.1"
   },
   "repository": {
     "type": "git",
